--- a/index.html
+++ b/index.html
@@ -5,8 +5,98 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+          <a class="main-header-logo" href="index.html">
+              <img src="img/logo.svg" width="111" height="24"
+               alt="логотип проекта «Нёрдс»">
+          </a> 
+           <ul class="site-navigation">                    
+              <li href="class-navigation-current">Студия</a></li>
+              <li> <a href="clients.html">Клиенты </a></li>
+              <li> <a href="catalog.html"> Магазин</a></li>
+              <li> <a href="contacts.html"></a></li>
+              <li> <a img src="img/korzina.svg" width="5" height="5"
+                alt="изображение корзины"></li>
+              <li> <a class="korzina-link">корзина</li>
+           </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="page-title">Делаем веб-сайты, приложения, презентации</h1>           
+              <h3>
+                <a href="catalog-item.html"> 
+                  <span class="catalog-categoty">ВЕБ-САЙТЫ
+                  </span>
+                  <span class="catalog-item-title">Мир никогда не будет прежним
+                    после того, как увидит Ваш сайт!
+                  </span>
+                </a>
+              </h3> 
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                <img src="img/product-1.jpg" width="220" height="165" 
+                 alt="веб-сайты">
+                 </a>
+                </p>
+              <p class="catalog-item-order">
+                <a class="button" href="#">Заказать</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <h3>
+                <a href="catalog-item.html"> 
+                  <span class="catalog-categoty">ПРИЛОЖЕНИЯ
+                  </span>
+                  <span class="catalog-item-title">Получите ещё 15 приложений
+                    в AppleStore и Google Play 
+                  </span>
+                </a>
+              </h3> 
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                <img src="img/product-2.jpg" width="220" height="165" 
+                 alt="Приложения">
+                 </a>
+                </p>
+              <p class="catalog-item-order">
+                 <a class="button" href="#">Заказать</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <h3>
+                <a href="catalog-item.html"> 
+                  <span class="catalog-categoty">ПРЕЗЕНТАЦИИ
+                  </span>
+                  <span class="catalog-item-title">Вы даже не представляете,
+                    насколько вы изумительны!
+                  </span>
+                </a>
+              </h3> 
+              <p class="catalog-item-image">
+                <a href="catalog-item.html">
+                <img src="img/product-3.jpg" width="220" height="165" 
+                 alt="Презентации">
+                 </a>
+                </p>
+              <p class="catalog-item-order">
+                 <a class="button" href="#">Купить</a>
+              </p>
+            </li>
+    </main>
+    <footer class="main-footer">
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#"> Вконтакте</a></li>
+          <li><a class="social-button" href="#"> Фейсбук</a></li>
+          <li><a class="social-button" href="#"> Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-slogan">
+        <b> Давай дружить, это выгодно!</b> 
+        <b> Скидка 10% для друзей из социальных сетей</b>
+        </p>
+    </footer>
+ 
   </body>
 </html>
