исправление замечаний задания 2.2

--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-          <a class="main-header-logo" href="index.html">
-              <img src="img/logo.svg" width="111" height="24"
-               alt="логотип проекта «Нёрдс»">
-          </a> 
-           <ul class="site-navigation">                    
-              <li href="class-navigation-current">Студия</a></li>
-              <li> <a href="clients.html">Клиенты </a></li>
-              <li> <a href="catalog.html"> Магазин</a></li>
-              <li> <a href="contacts.html"></a></li>
-              <li> <a img src="img/korzina.svg" width="5" height="5"
-                alt="изображение корзины"></li>
-              <li> <a class="korzina-link">корзина</li>
-           </ul>
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" width="111" height="24"
+          alt="логотип проекта «Нёрдс»">
+        </a> 
+        <ul class="site-navigation">                    
+          <li> <a href="#">Студия</a></li>
+          <li> <a href="#">Клиенты </a></li>
+          <li> <a href="catalog.html"> Магазин</a></li>
+          <li> <img src="img/cart.svg" width="10" height="10" alt="cart"></li>
+          <li> <a href="#">корзина</a></li>
+        </ul>
       </nav>
     </header>
+
     <main class="container">
-      <h1 class="page-title">Делаем веб-сайты, приложения, презентации</h1>           
+      <h1 class="page-title">Это сайт веб-студии</h1>           
+        <ul>        
+            <li class="catalog-item-website">
               <h3>
-                <a href="catalog-item.html"> 
+                <a href="#"> 
                   <span class="catalog-categoty">ВЕБ-САЙТЫ
                   </span>
                   <span class="catalog-item-title">Мир никогда не будет прежним
@@ -33,11 +34,11 @@
                   </span>
                 </a>
               </h3> 
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                <img src="img/product-1.jpg" width="220" height="165" 
-                 alt="веб-сайты">
-                 </a>
+                <p class="catalog-item-image">
+                  <a href="">
+                    <img src="img/product-1.jpg" width="220" height="165" 
+                    alt="веб-сайты">
+                  </a>
                 </p>
               <p class="catalog-item-order">
                 <a class="button" href="#">Заказать</a>
@@ -45,27 +46,23 @@
             </li>
             <li class="catalog-item">
               <h3>
-                <a href="catalog-item.html"> 
-                  <span class="catalog-categoty">ПРИЛОЖЕНИЯ
+                  <span class="catalog-categoty">Приложения
                   </span>
-                  <span class="catalog-item-title">Получите ещё 15 приложений
+                  <р>Получите ещё 15 приложений<br>
                     в AppleStore и Google Play 
-                  </span>
-                </a>
+                  </р>
               </h3> 
-              <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                <img src="img/product-2.jpg" width="220" height="165" 
-                 alt="Приложения">
-                 </a>
-                </p>
+              <p class="catalog-item-image">                
+                  <img src="img/product-2.jpg" width="220" height="165" 
+                   alt="Приложения">
+              </p>
               <p class="catalog-item-order">
-                 <a class="button" href="#">Заказать</a>
+                <a class="button" href="#">Заказать</a>
               </p>
             </li>
             <li class="catalog-item">
               <h3>
-                <a href="catalog-item.html"> 
+                <a href=""> 
                   <span class="catalog-categoty">ПРЕЗЕНТАЦИИ
                   </span>
                   <span class="catalog-item-title">Вы даже не представляете,
@@ -74,15 +71,16 @@
                 </a>
               </h3> 
               <p class="catalog-item-image">
-                <a href="catalog-item.html">
-                <img src="img/product-3.jpg" width="220" height="165" 
-                 alt="Презентации">
+                <a href="">
+                  <img src="img/product-3.jpg" width="220" height="165" 
+                   alt="Презентации">
                  </a>
-                </p>
+              </p>
               <p class="catalog-item-order">
                  <a class="button" href="#">Купить</a>
               </p>
-            </li>
+            </li>     
+        </ul>
     </main>
     <footer class="main-footer">
       <div class="footer-social">
@@ -95,8 +93,7 @@
       <p class="footer-slogan">
         <b> Давай дружить, это выгодно!</b> 
         <b> Скидка 10% для друзей из социальных сетей</b>
-        </p>
+      </p>
     </footer>
- 
   </body>
 </html>
