--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <li> <a href="#">Студия</a></li>
           <li> <a href="#">Клиенты </a></li>
           <li> <a href="catalog.html"> Магазин</a></li>
-          <li> <img src="img/cart.svg" width="10" height="10" alt="cart"></li>
           <li> <a href="#">корзина</a></li>
         </ul>
       </nav>
@@ -23,64 +22,44 @@
 
     <main class="container">
       <h1 class="page-title">Это сайт веб-студии</h1>           
-        <ul>        
-            <li class="catalog-item-website">
-              <h3>
-                <a href="#"> 
-                  <span class="catalog-categoty">ВЕБ-САЙТЫ
-                  </span>
-                  <span class="catalog-item-title">Мир никогда не будет прежним
-                    после того, как увидит Ваш сайт!
-                  </span>
-                </a>
-              </h3> 
-                <p class="catalog-item-image">
-                  <a href="">
-                    <img src="img/product-1.jpg" width="220" height="165" 
-                    alt="веб-сайты">
-                  </a>
-                </p>
-              <p class="catalog-item-order">
+        <section class="catalog-main">
+          <h2 class="visually-hidden">Список программных продуктов веб-студии</h2>
+            <ul>        
+              <li class="catalog-item">
+                <div>
+                  <img src="img/product-1.jpg" width="220" height="165" 
+                  alt="Веб-сайты">
+                </div>
+                <h3>Веб-сайты</h3>  
+                <р>Мир никогда не будет прежним
+                после того, как увидит Ваш сайт! 
+                </р>
                 <a class="button" href="#">Заказать</a>
-              </p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                  <span class="catalog-categoty">Приложения
-                  </span>
-                  <р>Получите ещё 15 приложений<br>
-                    в AppleStore и Google Play 
-                  </р>
-              </h3> 
-              <p class="catalog-item-image">                
+              </li>
+              <li class="catalog-item">
+                <div>
                   <img src="img/product-2.jpg" width="220" height="165" 
-                   alt="Приложения">
-              </p>
-              <p class="catalog-item-order">
+                  alt="Приложения">
+                </div>
+                <h3>Приложения</h3>  
+                <р>Получите ещё 15 приложений
+                   в AppleStore и Google Play 
+                </р>
                 <a class="button" href="#">Заказать</a>
-              </p>
-            </li>
-            <li class="catalog-item">
-              <h3>
-                <a href=""> 
-                  <span class="catalog-categoty">ПРЕЗЕНТАЦИИ
-                  </span>
-                  <span class="catalog-item-title">Вы даже не представляете,
-                    насколько вы изумительны!
-                  </span>
-                </a>
-              </h3> 
-              <p class="catalog-item-image">
-                <a href="">
+              </li>
+              <li class="catalog-item">
+                <div>
                   <img src="img/product-3.jpg" width="220" height="165" 
-                   alt="Презентации">
-                 </a>
-              </p>
-              <p class="catalog-item-order">
-                 <a class="button" href="#">Купить</a>
-              </p>
-            </li>     
-        </ul>
+                  alt="Презентации">
+                </div>
+                <h3>Презентации</h3>  
+                <р>Вы даже не представляете,
+                насколько вы изумительны! 
+                </р>
+                <a class="button" href="#">Заказать</a>
+              </li>
+            </ul>
+        </section>
     </main>
     <footer class="main-footer">
       <div class="footer-social">
