Подключил картинка, задание 6

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" width="111" height="24"
+          <img src="img/nerds-logo.svg" width="111" height="24"
           alt="логотип проекта «Нёрдс»">
         </a> 
         <ul class="site-navigation">                    
@@ -27,7 +27,7 @@
             <ul>        
               <li class="catalog-item">
                 <div>
-                  <img src="img/product-1.jpg" width="220" height="165" 
+                  <img src="img/advanture-picture-red.jpg" width="220" height="165" 
                   alt="Веб-сайты">
                 </div>
                 <h3>Веб-сайты</h3>  
@@ -38,7 +38,7 @@
               </li>
               <li class="catalog-item">
                 <div>
-                  <img src="img/product-2.jpg" width="220" height="165" 
+                  <img src="img/advantage-picture-green.jpg" width="220" height="165" 
                   alt="Приложения">
                 </div>
                 <h3>Приложения</h3>  
@@ -49,7 +49,7 @@
               </li>
               <li class="catalog-item">
                 <div>
-                  <img src="img/product-3.jpg" width="220" height="165" 
+                  <img src="img/advanture-picture-yellow.jpg" width="220" height="165" 
                   alt="Презентации">
                 </div>
                 <h3>Презентации</h3>  
@@ -64,9 +64,9 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#"> Вконтакте</a></li>
-          <li><a class="social-button" href="#"> Фейсбук</a></li>
-          <li><a class="social-button" href="#"> Инстаграм</a></li>
+          <li><a class="social-button" href="vk-icon.svg"> Вконтакте</a></li>
+          <li><a class="social-button" href="fb-icon.svg"> Фейсбук</a></li>
+          <li><a class="social-button" href="insta-icon.svg"> Инстаграм</a></li>
         </ul>
       </div>
       <p class="footer-slogan">
