--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/nerds-logo.svg" width="111" height="24"
+          <img src="img/nerds-logo.svg" width="160" height="65"
           alt="логотип проекта «Нёрдс»">
         </a> 
         <ul class="site-navigation">                    
@@ -27,35 +27,35 @@
             <ul>        
               <li class="catalog-item">
                 <div>
-                  <img src="img/advanture-picture-red.jpg" width="220" height="165" 
+                  <img src="img/advantage-picture-red.jpg" width="300" height="146" 
                   alt="Веб-сайты">
                 </div>
                 <h3>Веб-сайты</h3>  
-                <р>Мир никогда не будет прежним
+                <p>Мир никогда не будет прежним
                 после того, как увидит Ваш сайт! 
-                </р>
+                </p>
                 <a class="button" href="#">Заказать</a>
               </li>
               <li class="catalog-item">
                 <div>
-                  <img src="img/advantage-picture-green.jpg" width="220" height="165" 
+                  <img src="img/advantage-picture-green.jpg" width="300" height="146" 
                   alt="Приложения">
                 </div>
                 <h3>Приложения</h3>  
-                <р>Получите ещё 15 приложений
+                <p>Получите ещё 15 приложений
                    в AppleStore и Google Play 
-                </р>
+                </p>
                 <a class="button" href="#">Заказать</a>
               </li>
               <li class="catalog-item">
                 <div>
-                  <img src="img/advanture-picture-yellow.jpg" width="220" height="165" 
+                  <img src="img/advantage-picture-yellow.jpg" width="300" height="146" 
                   alt="Презентации">
                 </div>
                 <h3>Презентации</h3>  
-                <р>Вы даже не представляете,
+                <p>Вы даже не представляете,
                 насколько вы изумительны! 
-                </р>
+                </p>
                 <a class="button" href="#">Заказать</a>
               </li>
             </ul>
@@ -64,9 +64,9 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="vk-icon.svg"> Вконтакте</a></li>
-          <li><a class="social-button" href="fb-icon.svg"> Фейсбук</a></li>
-          <li><a class="social-button" href="insta-icon.svg"> Инстаграм</a></li>
+          <li><a class="social-button" href="#"> Вконтакте</a></li>
+          <li><a class="social-button" href="#"> Фейсбук</a></li>
+          <li><a class="social-button" href="#"> Инстаграм</a></li>
         </ul>
       </div>
       <p class="footer-slogan">
