--- a/index.html
+++ b/index.html
@@ -74,5 +74,33 @@
         <b> Скидка 10% для друзей из социальных сетей</b>
       </p>
     </footer>
+
+    <section>
+      <form class="letter" method="get"
+      action="https://echo.htmlacademy.ru">
+      <fieldset>
+        <legend> Напишите нам</legend>
+        <ul>
+          <li>
+            <label for="your-name">Ваше имя:</label>
+            <input class="letter-name" 
+            type="text" placeholder="Имя Фамилия"
+            id="your-name" name="your-name-send">
+          </li>
+          <li>
+            <label for="your-email">Ваш e-mail:</label>
+            <input class="letter-email" 
+            type="text" placeholder="email@example.com"
+            id="your-email" name="your-name-send">
+          </li>
+          <li>
+            <label for="letter-text">Текст письма</label>
+            <input class="letter-text" 
+            type="text" placeholder="email@example.com"
+            id="letter-text" name="your-letter-text">
+          </li>
+        </ul>
+      </fieldset>    
+     </section>
   </body>
 </html>
