--- a/catalog.html
+++ b/catalog.html
@@ -28,36 +28,25 @@
               action="https://echo.htmlacademy
               .ru">
               <fieldset>
-                <legend> сетка</legend>
+                <legend>сетка</legend>
                 <ul>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-radio" 
-                    type="radio" name
-                    ="net"
-                    id="filter-adapted"
-                    checked>
+                    <input class="visually-hidden filter-input filter-input-radio" 
+                    type="radio" name="net" id="filter-adapted" value="value-net" checked>
                     <label for="filter-adapted">
                       Адаптивная
                     </label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-radio" 
-                    type="radio" id="filter-fixed" name
-                    ="net">
+                    <input class="visually-hidden filter-input filter-input-radio" 
+                    type="radio"name="net" id="filter-fixed"  value="value-fixed">
                     <label for="filter-fixed">
                       Фиксированная
                     </label>   
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-radio" 
-                    type="radio" name
-                    ="net" id="filter-rubber">
+                    <input class="visually-hidden filter-input filter-input-radio" 
+                    type="radio" name="net" id="filter-rubber" value="value-rubber">
                     <label for="filter-rubber">
                       Резиновая
                     </label>
@@ -69,54 +58,38 @@
                 <legend>Особенности:</legend>
                 <ul>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-checkbox" 
-                    type="checkbox" name="slider"
-                    value="slider" id="filter-slider">
-                    <label for="filter-slider" checked>
+                    <input class="visually-hidden filter-input filter-input-checkbox" 
+                    type="checkbox" name="features" value="slider" id="filter-slider" checked>
+                    <label for="filter-slider">
                     Слайдер</label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-checkbox" type="checkbox"
-                    name="advanteges" value="advantages" 
-                    id="filter-advanteges">
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox"
+                    name="features" value="advantages" id="filter-advanteges">
                     <label for="filter-advanteges">
                       Блок преимуществ</label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-checkbox" type="checkbox"
-                    name="news" value="news"
-                    id="filter-news" checked>
+                    <input class="visually-hidden filter-input filter-input-checkbox"
+                    type="checkbox" name="features" value="news" id="filter-news" checked>
                     <label for="filter-news">
                     Новости</label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-checkbox" type="checkbox"
-                    name="gallery" value="gallery" 
-                    id="filter-gallery">
+                    <input class="visually-hidden filter-input filter-input-checkbox"
+                    type="checkbox" name="features" value="gallery" id="filter-gallery">
                     <label for="filter-gallery">
                       Блок преимуществ</label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually
-                    -hidden filter-input
-                    filter-input-checkbox" type="checkbox"
-                    name="cart" value="cart"
-                    id="filter-cart">
+                    <input class="visually-hidden filter-input filter-input-checkbox" 
+                    type="checkbox" name="features" value="cart" id="filter-cart">
                     <label for="filter-cart">
                     Корзина</label>
                   </li>
                 </ul>
               </fieldset>
-              <button type="submit" class=
-                "filter-button button">
+              <button type="submit" class="filter-button button">
                 Показать
               </button>
             </form>
@@ -196,32 +169,35 @@
       </p>
     </footer>
     
-     <section>
-      <form class="letter" method="get"
-      action="https://echo.htmlacademy.ru">
-      <fieldset>
-        <legend> Напишите нам</legend>
+    <section>
+      <form class="letter" method="post" action="https://echo.htmlacademy.ru">
+      <h2> Напишите нам</h2>
         <ul>
           <li>
             <label for="your-name">Ваше имя:</label>
-            <input class="letter-name" 
-            type="text" placeholder="Имя Фамилия"
+            <input class="letter-name" type="text" placeholder="Имя Фамилия"
             id="your-name" name="your-name-send">
           </li>
           <li>
             <label for="your-email">Ваш e-mail:</label>
-            <input class="letter-email" 
-            type="text" placeholder="email@example.com"
+            <input class="letter-email" type="text" placeholder="email@example.com"
             id="your-email" name="your-name-send">
           </li>
           <li>
-            <label for="letter-text">Текст письма</label>
-            <input class="letter-text" 
-            type="text" placeholder="email@example.com"
-            id="letter-text" name="your-letter-text">
+            <label for="letter">Текст письма:</label>
+            <textarea id="letter" name="name-letter"
+            rows="5" cols="33">
+            В свободной форме
+            </textarea>
           </li>
         </ul>
-      </fieldset>    
+        <button type="submit" class="letter-submit button">
+          Отправить
+        </button>
+      <form>  
+        <button type="button" class="letter-button button">
+          Закрыть
+        </button>
      </section>
   </body>
 </html>
