--- a/catalog.html
+++ b/catalog.html
@@ -25,10 +25,9 @@
           <section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filters" method="get"
-              action="https://echo.htmlacademy
-              .ru">
+              action="https://echo.htmlacademy.ru">
               <fieldset>
-                <legend>сетка</legend>
+                <legend><h2>сетка:</h2></legend>
                 <ul>
                   <li class="filter-option">
                     <input class="visually-hidden filter-input filter-input-radio" 
@@ -55,7 +54,7 @@
               </fieldset>
             
               <fieldset>
-                <legend>Особенности:</legend>
+                <legend> <h2>особенности:</h2></legend>
                 <ul>
                   <li class="filter-option">
                     <input class="visually-hidden filter-input filter-input-checkbox" 
@@ -181,7 +180,7 @@
           <li>
             <label for="your-email">Ваш e-mail:</label>
             <input class="letter-email" type="text" placeholder="email@example.com"
-            id="your-email" name="your-name-send">
+            id="your-email" name="your-email-send">
           </li>
           <li>
             <label for="letter">Текст письма:</label>
