--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li>
             <label for="your-email">Ваш e-mail:</label>
             <input class="letter-email" type="text" placeholder="email@example.com"
-            id="your-email" name="your-name-send">
+            id="your-email" name="your-email-send">
           </li>
           <li>
             <label for="letter">Текст письма:</label>
