--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
             <form class="filters" method="get"
               action="https://echo.htmlacademy.ru">
               <fieldset>
-                <legend><h2>сетка:</h2></legend>
+                <legend>Сетка:</legend>
                 <ul>
                   <li class="filter-option">
                     <input class="visually-hidden filter-input filter-input-radio" 
@@ -54,7 +54,7 @@
               </fieldset>
             
               <fieldset>
-                <legend> <h2>особенности:</h2></legend>
+                <legend>Особенности:</h2></legend>
                 <ul>
                   <li class="filter-option">
                     <input class="visually-hidden filter-input filter-input-checkbox" 
