--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=PX
+    +Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+
+  <body class="inner-page">
+
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
@@ -18,14 +24,18 @@
           <li> <a href="#">корзина</a></li>
         </ul>
       </nav>
+      
     </header>
 
-    <main>
-      <h1 class="page-title">Магазин готовых шаблонов</h1>
-          <section class="filters">
+    <main class="container">
+      <div class="page-title">
+      <h1 class="page-title">Магазин готовых шаблонов</h1> 
+      </div>
+      <section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filters" method="get"
               action="https://echo.htmlacademy.ru">
+              
               <fieldset>
                 <legend>Сетка:</legend>
                 <ul>
@@ -96,16 +106,16 @@
         <section class="catalog-list">
           <h2 class="visuallity-hidden">Карточки товаров</h2>
             <ul> 
-              <li class="catalog-item-sedona">
+              <li class="catalog-item">
                 <img src="img/img-sedona-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта туристической фирмы">
                 <div>
                    <a href="#"><h3>Sedona</h3></a>
-                   <p>Сайт для туристической фирмы</p>
+                   <p>Информационный сайт для туристов</p>
                    <span>9900 руб.</span>
                 </div>
               </li>
-              <li class="catalog-item-pink">
+              <li class="catalog-item">
                 <img src="img/img-pink-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта фирмы фотофильтров для смартфона">
                 <div>
@@ -114,7 +124,7 @@
                    <span>10 000 руб.</span>
                 </div>
               </li>
-              <li class="catalog-item-barbershop">
+              <li class="catalog-item">
                 <img src="img/img-barbershop-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта Барбершоп Бородинский">
                 <div>
@@ -123,7 +133,7 @@
                    <span>11 000 руб.</span>
                 </div>
               </li>
-              <li class="catalog-item-cart2">
+              <li class="catalog-item">
                 <img src="img/img-mishka-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта магазина вязаных корзинок">
                 <div>
@@ -132,7 +142,7 @@
                    <span>12 000 руб.</span>
                 </div>
               </li>
-              <li class="catalog-item-college">
+              <li class="catalog-item">
                 <img src="img/img-aplus-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта ВУЗа">
                 <div>
@@ -141,7 +151,7 @@
                    <span>14 000 руб.</span>
                 </div>
               </li>
-              <li class="catalog-item-craft_kvass">
+              <li class="catalog-item">
                 <img src="img/img-kvast-jpg.jpg" width="360" height="576" 
                   alt="Главная страница сайта крафтового кваса">
                 <div>
@@ -199,5 +209,6 @@
         </button>
      </section>
   </body>
+
 </html>
   
