--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -18,14 +18,14 @@
         <ul class="site-navigation">                    
           <li> <a href="#">Студия</a></li>
           <li> <a href="#">Клиенты </a></li>
-          <li> <a href="catalog.html"> Магазин</a></li>
+          <li > <a class="red-line-catalog" href="catalog.html"> Магазин</a></li>
           <li> <a href="#">корзина</a></li>
         </ul>
       </nav>
     </header>
 
     <main class="container">
-      <div class="page-title">
+      <div class="page-title-container">
       <h1 class="page-title">Магазин готовых шаблонов</h1> 
       </div>
       <section class="filters">
@@ -140,34 +140,32 @@
           <li><a class="social-button" href="#"> Инстаграм</a></li>
         </ul>
       </div>
-      <p class="footer-slogan">
-        <b> Давай дружить, это выгодно!</b> 
-        <b> Скидка 10% для друзей из социальных сетей</b>
-      </p>
+      <p class="footer-slogan"> Давай дружить, это выгодно!</p> 
+      <p class="footer-sales"></p> Скидка 10% для друзей из социальных сетей</b>
     </footer>
-    
-    <section>
+        
+    <section class="modal modal-letter">
+      <div class="box-moder-letter">
       <form class="letter" method="post" action="https://echo.htmlacademy.ru">
       <h2> Напишите нам</h2>
-        <ul>
-          <li>
-            <label for="your-name">Ваше имя:</label>
-            <input class="letter-name" type="text" placeholder="Имя Фамилия" id="your-name" name="your-name-send">
-          </li>
-          <li>
-            <label for="your-email">Ваш e-mail:</label>
-            <input class="letter-email" type="text" placeholder="email@example.com" id="your-email" name="your-email-send">
-          </li>
-          <li>
-            <label for="letter">Текст письма:</label>
-            <textarea id="letter" name="name-letter" rows="5" cols="33">В свободной форме</textarea>
-          </li>
-        </ul>
-        <button type="submit" class="letter-submit button">Отправить</button>
-      <form>  
-        <button type="button" class="letter-button button">Закрыть</button>
+      <ul class="letter-list">
+        <li>
+          <label class="modal-letter-label" for="your-name">Ваше имя:</label>
+          <input class="modal-letter-input" type="text" placeholder="Имя Фамилия" id="your-name" name="your-name-send">
+        </li>
+        <li>
+          <label class="modal-letter-label" for="your-email">Ваш e-mail:</label>
+          <input class="modal-letter-input" type="text" placeholder="email@example.com" id="your-email" name="your-email-send">
+        </li>
+        <li>
+          <label class="modal-letter-label" for="letter">Текст письма:</label>
+          <textarea class="letter-text" id="letter" name="name-letter" rows="5" cols="33">В свободной форме</textarea>
+        </li>
+      </ul>
+      <button type="submit" class="letter-submit button">Отправить</button>
+      </form>  
+      <button type="button" class="letter-button button">Закрыть</button>
+      </div>
      </section>
   </body>
-
 </html>
-  
