--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
       </div>
       <p class="footer-slogan"> Давай дружить, это выгодно!</p> 
-      <p class="footer-sales"></p> Скидка 10% для друзей из социальных сетей</b>
+      <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
     </footer>
 
     <section class="modal modal-letter">
