--- a/catalog.html
+++ b/catalog.html
@@ -78,54 +78,54 @@
         </form>
       </section>
       <section class="catalog-list">
-        <h2 class="visuallity-hidden">Карточки товаров</h2>
+        <h2 class="visually-hidden">Карточки товаров</h2>
           <ul> 
             <li class="catalog-item">
               <img src="img/img-sedona-jpg.jpg" width="360" height="576" alt="Главная страница сайта туристической фирмы">
-                <div>
-                   <a href="#"><h3>Sedona</h3></a>
-                   <p>Информационный сайт для туристов</p>
-                   <span>9900 руб.</span>
+                <div class="card">
+                   <a href="#"><h3 class="card-title">Sedona</h3></a>
+                   <p class="card-information">Информационный сайт для туристов</p>
+                   <span class="card-button">9900 руб.</span>
                 </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Главная страница сайта фирмы фотофильтров для смартфона">
-              <div>
-                <a href="#"><h3>Pink</h3></a>
-                <p></p>
-                <span>10 000 руб.</span>
+              <div class="card visually-hidden">
+                <a href="#"><h3 class="card-title">Pink</h3></a>
+                <p class="card-information">Сайт "Розовый</p>
+                <span class="card-button">10 000 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Главная страница сайта Барбершоп Бородинский">
-              <div>
-                <a href="#"><h3>Барбершоп Бородинский</h3></a>
-                <p></p>
-                <span>11 000 руб.</span>
+              <div class="card visually-hidden">
+                <a href="#"><h3 class="card-title">Барбершоп Бородинский</h3></a>
+                <p class="card-information">Сайт барбершопа Бородинский</p>
+                <span class="card-button">11 000 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Главная страница сайта магазина вязаных корзинок">
-              <div>
-                <a href="#"><h3>Вязаные корзинки</h3></a>
-                <p></p>
-                <span>12 000 руб.</span>
+              <div class="card visually-hidden">
+                <a href="#"><h3 class="card-title">Вязаные корзинки</h3></a>
+                <p class="card-information"> Сайт фирмы Вязанные корзинки</p>
+                <span class="card-button">12 000 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Главная страница сайта ВУЗа">
-              <div>
-                <a href="#"><h3>Какой-то ВУЗ</h3></a>
-                <p></p>
-                <span>14 000 руб.</span>
+              <div class="card visually-hidden">
+                <a href="#"><h3 class="card-title">Какой-то ВУЗ</h3></a>
+                <p class="card-information">Сайт ВУЗа</p>
+                <span class="card-button">14 000 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Главная страница сайта крафтового кваса">
-              <div>
-                <a href="#"><h3>Крафтовый квасс</h3></a>
-                <p></p>
-                <span>15 000 руб.</span>
+              <div class="card visually-hidden">
+                <a href="#"><h3 class="card-title">Крафтовый квасс</h3></a>
+                <p class="card-information"> Сайт фирмы, поставляющей крафтовый квас</p>
+                <span class="card-button">15 000 руб.</span>
               </div>
             </li>
           </ul>
@@ -141,7 +141,7 @@
         </ul>
       </div>
       <p class="footer-slogan"> Давай дружить, это выгодно!</p> 
-      <p class="footer-sales"></p> Скидка 10% для друзей из социальных сетей</b>
+      <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
     </footer>
         
     <section class="modal modal-letter">
