--- a/catalog.html
+++ b/catalog.html
@@ -84,48 +84,48 @@
               <img src="img/img-sedona-jpg.jpg" width="360" height="576" alt="Главная страница сайта туристической фирмы">
                 <div class="card">
                    <a href="#"><h3 class="card-title">Sedona</h3></a>
-                   <p class="card-information">Информационный сайт для туристов</p>
+                   <p class="card-information">Информационный сайт<br>для туристов</p>
                    <span class="card-button">9900 руб.</span>
                 </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Главная страница сайта фирмы фотофильтров для смартфона">
-              <div class="card visually-hidden">
-                <a href="#"><h3 class="card-title">Pink</h3></a>
-                <p class="card-information">Сайт "Розовый</p>
-                <span class="card-button">10 000 руб.</span>
+              <div class="card">
+                <a href="#"><h3 class="card-title">Pink app</h3></a>
+                <p class="card-information">Продуктовый лендинг<br> приложения для iOS и Android</p>
+                <span class="card-button">9 900 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Главная страница сайта Барбершоп Бородинский">
-              <div class="card visually-hidden">
-                <a href="#"><h3 class="card-title">Барбершоп Бородинский</h3></a>
-                <p class="card-information">Сайт барбершопа Бородинский</p>
-                <span class="card-button">11 000 руб.</span>
+              <div class="card">
+                <a href="#"><h3 class="card-title">Barbershop</h3></a>
+                <p class="card-information">Сайт салона красоты.<br>Для мужчин, да.</p>
+                <span class="card-button">9 900 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Главная страница сайта магазина вязаных корзинок">
-              <div class="card visually-hidden">
-                <a href="#"><h3 class="card-title">Вязаные корзинки</h3></a>
-                <p class="card-information"> Сайт фирмы Вязанные корзинки</p>
-                <span class="card-button">12 000 руб.</span>
+              <div class="card">
+                <a href="#"><h3 class="card-title">Mishka</h3></a>
+                <p class="card-information">Интернет-магазин<br>вязанных игрушек</p>
+                <span class="card-button">9 900 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Главная страница сайта ВУЗа">
-              <div class="card visually-hidden">
-                <a href="#"><h3 class="card-title">Какой-то ВУЗ</h3></a>
-                <p class="card-information">Сайт ВУЗа</p>
-                <span class="card-button">14 000 руб.</span>
+              <div class="card">
+                <a href="#"><h3 class="card-title">A plus</h3></a>
+                <p class="card-information">Лендинг курсов повышения<br>квалификации</p>
+                <span class="card-button">9 900 руб.</span>
               </div>
             </li>
             <li class="catalog-item">
               <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Главная страница сайта крафтового кваса">
-              <div class="card visually-hidden">
-                <a href="#"><h3 class="card-title">Крафтовый квасс</h3></a>
-                <p class="card-information"> Сайт фирмы, поставляющей крафтовый квас</p>
-                <span class="card-button">15 000 руб.</span>
+              <div class="card">
+                <a href="#"><h3 class="card-title">Кваст</h3></a>
+                <p class="card-information"> Промо-сайт производителя<br>крафтового кваса</p>
+                <span class="card-button">9 900 руб.</span>
               </div>
             </li>
           </ul>
@@ -162,7 +162,7 @@
           <textarea class="letter-text" id="letter" name="name-letter" rows="5" cols="33">В свободной форме</textarea>
         </li>
       </ul>
-      <button type="submit" class="letter-submit button">Отправить</button>
+      <button type="submit" class="letter-button button">Отправить</button>
       </form>  
       <button type="button" class="letter-button button">Закрыть</button>
       </div>
