--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <textarea class="letter-text" id="letter" name="name-letter" rows="5" cols="33">В свободной форме</textarea>
         </li>
       </ul>
-      <button type="submit" class="letter-submit button">Отправить</button>
+      <button type="submit" class="letter-button button">Отправить</button>
       </form>  
       <button type="button" class="letter-button button">Закрыть</button>
       </div>
