--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
+  
   <body>
     <header class="main-header">
       <nav class="main-navigation">
@@ -17,53 +18,57 @@
           <li> <a href="#">Студия</a></li>
           <li> <a href="#">Клиенты </a></li>
           <li> <a href="catalog.html"> Магазин</a></li>
-          <li> <a href="#">корзина</a></li>
+          <li> <a href="#">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li><a href="basket-link" href="#">Корзина</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="container">
+    <main>
       <h1 class="page-title visually-hidden">Это сайт веб-студии</h1>           
       <section class="catalog-main">
         <h2 class="visually-hidden">Список программных продуктов веб-студии</h2>
-        <ul>        
-          <li class="catalog-item">
-            <div class="catalog-content">
-              <img src="img/advantage-picture-red.jpg" width="300" height="146" alt="Веб-сайты">
-            </div>
-            <h3>Веб-сайты</h3>  
-            <p>Мир никогда не будет прежним после того, как увидит Ваш сайт!</p>
-            <a class="button-red button" href="#">Заказать</a>
-        </li>
+        <ul class="catalog-list">        
         <li class="catalog-item">
-          <div class="catalog-content">
-             <img src="img/advantage-picture-green.jpg" width="300" height="146" alt="Приложения">
-          </div>
+          <div class="catalog-content"><img src="img/advantage-picture-red.jpg" width="300" height="146" alt="Веб-сайты"></div>
+          <h3>Веб-сайты</h3>  
+          <p>Мир никогда не будет прежним <br>после того, как увидит Ваш сайт!</p>
+          <a class="button-red button" href="#">Заказать</a>
+        </li>
+    
+        <li class="catalog-item">
+          <div class="catalog-content"><img src="img/advantage-picture-green.jpg" width="300" height="146" alt="Приложения"></div>
           <h3>Приложения</h3>  
-          <p>Покорите топ-10 приложений в AppleStore и Google Play</p>
+          <p>Покорите топ-10 приложений в<br>AppleStore и Google Play</p>
           <a class="button-green button" href="#">Заказать</a>
         </li>
+
         <li class="catalog-item" >
-          <div class="catalog-content">
-            <img src="img/advantage-picture-yellow.jpg" width="300" height="146" alt="Презентации">
-          </div>
+          <div class="catalog-content"><img src="img/advantage-picture-yellow.jpg" width="300" height="146" alt="Презентации"></div>
           <h3>Презентации</h3>  
-          <p>Вы даже не представляете, насколько вы изумительны!</p>
+          <p>Вы даже не представляете,<br> насколько вы изумительны!</p>
           <a class="button-yellow button" href="#">Заказать</a>
         </li>
-      </ul>   
+      </ul> 
+    </section>  
     </main>
     
     <footer class="main-footer">
-      <div class="footer-social">
-        <ul>
+        <ul class="footer-social">
           <li><a class="social-button" href="#"> Вконтакте</a></li>
           <li><a class="social-button" href="#"> Фейсбук</a></li>
           <li><a class="social-button" href="#"> Инстаграм</a></li>
         </ul>
-      </div>
-      <p class="footer-slogan"> Давай дружить, это выгодно!</p> 
-      <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
+        <div class="footer-words">
+          <div class="footer-slogan-wors">
+            <p class="footer-slogan"> Давай дружить, это выгодно!</p> 
+          </div>
+          <div class="footer-sales-words">   
+            <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
+          </div>
+        </div>
     </footer>
 
     <section class="modal modal-letter">
