--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
   
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
+      <div class="container">
+      <div class="main-navigation">
+          <a class="main-header-logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип проекта «Нёрдс»">
         </a> 
         <ul class="site-navigation">                    
-          <li> <a href="#">Студия</a></li>
-          <li> <a href="#">Клиенты </a></li>
-          <li> <a href="catalog.html"> Магазин</a></li>
-          <li> <a href="#">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html"> Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li><a href="basket-link" href="#">Корзина</a></li>
+          <li><a href="#">Корзина</a></li>
         </ul>
-      </nav>
+      </div>
+      </div>
     </header>
 
     <main>
-      <h1 class="page-title visually-hidden">Это сайт веб-студии</h1>           
+      <div class="container">
+      <h1 class="page-title visually-hidden">Это сайт веб-студии</h1>        
       <section class="catalog-main">
         <h2 class="visually-hidden">Список программных продуктов веб-студии</h2>
         <ul class="catalog-list">        
@@ -35,27 +38,30 @@
           <div class="catalog-content"><img src="img/advantage-picture-red.jpg" width="300" height="146" alt="Веб-сайты"></div>
           <h3>Веб-сайты</h3>  
           <p>Мир никогда не будет прежним <br>после того, как увидит Ваш сайт!</p>
-          <a class="button-red button" href="#">Заказать</a>
+          <a class="button-red button" href="#"><br>Заказать</a>
         </li>
     
         <li class="catalog-item">
           <div class="catalog-content"><img src="img/advantage-picture-green.jpg" width="300" height="146" alt="Приложения"></div>
           <h3>Приложения</h3>  
           <p>Покорите топ-10 приложений в<br>AppleStore и Google Play</p>
-          <a class="button-green button" href="#">Заказать</a>
+          <a class="button-green button" href="#"><br>Заказать</a>
         </li>
 
         <li class="catalog-item" >
           <div class="catalog-content"><img src="img/advantage-picture-yellow.jpg" width="300" height="146" alt="Презентации"></div>
           <h3>Презентации</h3>  
           <p>Вы даже не представляете,<br> насколько вы изумительны!</p>
-          <a class="button-yellow button" href="#">Заказать</a>
+          <a class="button-yellow button" href="#"><br>Заказать</a>
         </li>
-      </ul> 
-    </section>  
+        </ul> 
+      </section> 
+      </div> 
     </main>
     
     <footer class="main-footer">
+      <div class="container">
+        <div class="footer">
         <ul class="footer-social">
           <li><a class="social-button" href="#"> Вконтакте</a></li>
           <li><a class="social-button" href="#"> Фейсбук</a></li>
@@ -69,6 +75,8 @@
             <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
+        </div>
+      </div>
     </footer>
 
     <section class="modal modal-letter">
