--- a/catalog.html
+++ b/catalog.html
@@ -31,8 +31,8 @@
       </header>
           
     <main>
-      <div class="container">
       <div class="page-title-container"><h1 class="page-title">Магазин готовых шаблонов</h1></div>
+      <div class="container">
       <div class="middle-part-page">
         <section class="filters">
           <h2 class="visually-hidden">Фильтр товаров</h2>
@@ -97,7 +97,7 @@
             </li>
             <li class="catalog-item-page-catalog">
               <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Главная страница сайта фирмы фотофильтров для смартфона">
-              <div class="card visually-hidden">
+              <div class="card">
                 <a href="#"><h3 class="card-title">Pink app</h3></a>
                 <p class="card-information">Продуктовый лендинг<br> приложения для iOS и Android</p>
                 <span class="card-button"><br>9 900 руб.</span>
@@ -105,7 +105,7 @@
             </li>
             <li class="catalog-item-page-catalog">
               <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Главная страница сайта Барбершоп Бородинский">
-              <div class="card visually-hidden">
+              <div class="card">
                 <a href="#"><h3 class="card-title">Barbershop</h3></a>
                 <p class="card-information">Сайт салона красоты.<br>Для мужчин, да.</p>
                 <span class="card-button"><br>9 900 руб.</span>
@@ -113,7 +113,7 @@
             </li>
             <li class="catalog-item-page-catalog">
               <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Главная страница сайта магазина вязаных корзинок">
-              <div class="card visually-hidden">
+              <div class="card">
                 <a href="#"><h3 class="card-title">Mishka</h3></a>
                 <p class="card-information">Интернет-магазин<br>вязанных игрушек</p>
                 <span class="card-button"><br>9 900 руб.</span>
@@ -121,7 +121,7 @@
             </li>
             <li class="catalog-item-page-catalog">
               <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Главная страница сайта ВУЗа">
-              <div class="card visually-hidden">
+              <div class="card">
                 <a href="#"><h3 class="card-title">A plus</h3></a>
                 <p class="card-information">Лендинг курсов повышения<br>квалификации</p>
                 <span class="card-button"><br>9 900 руб.</span>
@@ -129,7 +129,7 @@
             </li>
             <li class="catalog-item-page-catalog">
               <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Главная страница сайта крафтового кваса">
-              <div class="card visually-hidden">
+              <div class="card">
                 <a href="#"><h3 class="card-title">Кваст</h3></a>
                 <p class="card-information"> Промо-сайт производителя<br>крафтового кваса</p>
                 <span class="card-button"><br>9 900 руб.</span>
