Задание 20, модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -237,8 +237,12 @@
       </div>
     </footer>
           
-    <section class="modal modal-letter">
-      <div class="box-moder-letter">
+    <div class="modal">
+      <button class="modal-close" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
+
+      <!--<div class="box-moder-letter">
       <form class="letter" method="post" action="https://echo.htmlacademy.ru">
       <h2> Напишите нам</h2>
       <ul class="letter-list">
@@ -256,9 +260,10 @@
         </li>
       </ul>
       <button type="submit" class="letter-button button">Отправить</button>
-      </form>  
-      <button type="button" class="letter-button button">Закрыть</button>
-      </div>
-     </section>
+      </form><-->  
+    <!--<button type="button" class="letter-button button">Закрыть</button>
+    -->
+  </div>
+
   </body>
 </html>
