--- a/index-border.html
+++ b/index-border.html
@@ -116,7 +116,7 @@
       <div class="container">
         <div class="fifth-part">
           <img src="img/htmlacdemy-logo.jpg" width="199" height="68" class="first-logo view-change" alt="Логотип htmlacademy">
-          <div class="first-line-logo"></div>
+          <div class="first-line"></div>
           <div class="first-empty"></div>
           <img src="img/borodinsli-logo.jpg" width="209" height="90" class="second-logo view-change" alt="Логотип барбершопа Бородинский">
           <div class="second-line"></div>
