Задание 20, правка от 15.02.2020

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
         <h2 class="slider-title visually-hidden">Слайдер из трёх слайдов</h2> 
         <ul class="slider">
           <li class="slide-one">
-              <h3 class="how title-one">Долго, дорого,<br>скрупулёзно.</h3>
-              <p class="perfect-design">Математически выверенный дизайн<br>вашего сайта или мобильного приложения.</p>
+              <h3 class="how">Долго, дорого,<br>скрупулёзно.</h3>
+              <p class="perfect-design">Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
               <a class="slider-button button" href="#">Узнать больше</a>
           </li>
           <li class="slide-two">
-              <h3 class="how title-two">Любим математику<br>как никто другой</h3>
+              <h3 class="how">Любим математику<br>как никто другой</h3>
               <p class="perfect-design">Накакого креатива, только математически выверенные формулы<br>для расчёта идеальных пропорций.</p>
               <a class="slider-button button" href="#">Узнать больше</a>
           </li>
           <li class="slide-three">
-              <h3 class="how titile-three">Только ночь<br>только хадкорд</h3>
-              <p class="perfect-design">Работать днём, как все? Мы против этого<br>Ближе к полуночи работа только начинается.</p>
+              <h3 class="how">Только ночь,<br>только хардкор</h3>
+              <p class="perfect-design">Работать днём, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
               <a class="slider-button button" href="#">Узнать больше</a>
           </li>
         </ul>
@@ -91,8 +91,8 @@
 
       <section class="container fourth-part">
         <div class="left-side-fourth-part">
-          <h2 class="who-we-are">Мы - маленькая, но гордая дизайн-студия из Краснодара.</h2>
-            <p class="principles">Исповедуем принципы минимализма и чистоты. Ставим математический расчёт выше креатива. Работаем на покладая рук, как роботы.</p>
+          <h2 class="who-we-are">Мы &#8212; маленькая, но гордая дизайн-студия из Краснодара.</h2>
+            <p class="principles">Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем на покладая рук, как роботы.</p>
             <p class="what">Выполняем заказы на разработку:</p>
             <ul class="what-list">
               <li class="what-item">Веб-сайтов любой сложности</li>
@@ -104,16 +104,16 @@
           <h2 class="visually-hidden">Список преимуществ дизайн-студии</h2>
             <img src="img/nerds-picture.jpg" width="360" height="208" class="picture-nerds" alt="Картинка с логотипом проекта"> 
             <h3 class="year">С 2004 года любим точность во всём</h3>
-            <table>
+            <table class="table">
               <tr class="percentes">
                 <td class="percentes-item">146<sup class="small">%</sup></td>
-                <td class="percentes-item">100<sup class="small">%</sup></td>
-                <td class="percentes-item">50<sup class="small">%</sup></td>
+                <td class="percentes-item column2">100<sup class="small">%</sup></td>
+                <td class="percentes-item column3">50<sup class="small">%</sup></td>
               </tr>
               <tr class="percentes-mean">
                 <td class="percentes-mean-item">Уровень самоотдачи</td>
-                <td class="percentes-mean-item">Соблюдение сроков</td>
-                <td class="percentes-mean-item">Минимальная предоплата</td>
+                <td class="percentes-mean-item column2">Соблюдение сроков</td>
+                <td class="percentes-mean-item column3">Минимальная предоплата</td>
               </tr>
             </table>
         </div>  
@@ -122,17 +122,16 @@
       <section class="container">
         <h2 class="visually-hidden">Логотипы</h2>
         <ul class="fifth-part">
-          <li class="logo-line"><a href="https://up.htmlacademy.ru/htmlcss/27/project/nerds-27/nerds#nerds-3-6"><img src="img/htmlacdemy-logo.jpg" width="199" height="68" alt="Логотип HTML академии"></a></li>
-          <li class="logo-line"><a href="https://up.htmlacademy.ru/htmlcss/27/project/nerds-27/nerds#nerds-3-6"><img src="img/borodinsli-logo.jpg" width="209" height="90" alt="Логотип барбершопа Бородинский"></a></li>
-          <li class="logo-line"><a href="https://up.htmlacademy.ru/htmlcss/27/project/nerds-27/nerds#nerds-3-6"><img src="img/pink-logo.jpg" width="185" height="52" alt="Логотип продуктового лендинга приложения для iOS и Android"></a></li>
-          <li class="logo-line"><a href="https://up.htmlacademy.ru/htmlcss/27/project/nerds-27/nerds#nerds-3-6"><img src="img/mishka-logo.jpg" width="173" height="84" alt="Логотип магазина вязаных игрушек"></a></li>
+          <li class="logo-line logo1"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacdemy-logo.jpg" width="199" height="68" alt="Логотип HTML академии"></a></li>
+          <li class="logo-line logo2"><a href="#"><img src="img/borodinsli-logo.jpg" width="209" height="90" alt="Логотип барбершопа Бородинский"></a></li>
+          <li class="logo-line logo3"><a href="#"><img src="img/pink-logo.jpg" width="185" height="52" alt="Логотип продуктового лендинга приложения для iOS и Android"></a></li>
+          <li class="logo-line logo4"><a href="#"><img src="img/mishka-logo.jpg" width="173" height="84" alt="Логотип магазина вязаных игрушек"></a></li>
         </ul>
       </section>
 
       <section class="map">
         <h2 class="visually-hidden">Карта и контакты</h2>
-        <img src="img/map-marker4.jpg"  class="map-image" width="1160" height="416" alt="карта">
-               
+        <img src="img/map-marker4.jpg" width="1160" height="416" alt="карта">     
         <div class="map-contacts">
           <h2 class="studio-name">nёrds design studio</h2>
           <address class="studio-address">191186, Санкт-Петебург, ул. Б. Конюшенная д.19/8</address>
@@ -164,7 +163,7 @@
               </svg></a></li>
           </ul>
           <div class="footer-words">
-            <p class="footer-slogan"> Давай дружить, это выгодно!</p>
+            <p class="footer-slogan"> Давайте дружить, это выгодно!</p>
             <p class="footer-sales"> Скидка 10% для друзей из социальных сетей</p>
           </div>
         </section>
@@ -192,7 +191,10 @@
       </form>  
       </div>
     </section>
- 
+    <section>
+      <h2 class="visually-hidden">Секция для эксперимента в ховерами и фокусами</h2>
+      <div class="test"><a href="#">лабораторная крыса</a></div>
+    </section>
   </body>
 </html>
 
